    - Gets the town at that WorldCoord or null if it is in the wilderness.
    - Best used after WorldCoord.hasTownBlock();
  - Fix long town/nation names being able to break the TownyFormatter/ChatTools.
    - Closes #4942.
  - Fix sheep being protected from shearing in the wilderness.
  - Improve /town claim auto, works again but doesn't always claim everything it could in one use. 
  - Fix tamed dogs not being hittable inside towns, courtesy of Warriorrrr with PR #4955.
    - Closes #4954.
  - Fix a few tab completion issues with the addon API, courtesy of Warriorrrr with PR #4943.
  - Add commands from being ran by outsiders, courtesy of EuGNosii with PR #4953.
    - Closes #4951.
  - New Config Option: global_town_settings.town_command_blacklisting.own_town_and_wilderness_limited_commands
    - Default: sethome,home
    - This allows the usage of blacklisted commands only in the player's town and the wilderness (essentially blocking commands from being ran by tourists/visitors.)
    - Players with the towny.globally_welcome permission node are not going to be limited by this list.
    - Commands have to be on town_command_blacklisting.town_blacklisted_commands, else this is not going to be checked.
  - Include tb_prefix in column drop check, courtesy of Parsonswy with PR #4952 (First-Time Contributor!)
    - For the mysql servers that could never get the old columns dropped, this will fix that, and prevent the massive error logs that resulted from it.
    - Closes #4935.
  - Bump language files to 0.106.
0.97.0.2:
  - Validate /plot group fs input, courtesy of Warriorrrr with PR #4968.
    - Closes #4960.
  - Fix addon api exception in the towny command, courtesy of Warriorrrr with PR #4967.
    - Closes #4965.
  - Shade in slf4j, fixing ClassNotFoundException: org.slf4j.LoggerFactory
    - Closes #4950.
  - Update es-419, courtesy of EuGNosii with PR #4964.
  - Fix towns that already have a nation being able to be sent nation invites.
    - Closes #4963.