@@ -6135,3 +6135,5 @@ v0.92.0.11:
   - Update es-419, courtesy of EuGNosii with PR #4964.
   - Fix towns that already have a nation being able to be sent nation invites.
     - Closes #4963.
+  - Fix nations not losing their spawn point.
+    - Closes #4961.
